--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInActivity">
+    tools:context=".SignInActivity"
+    android:background="@color/pink_200">
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -24,7 +25,7 @@
             android:layout_height="wrap_content"
             android:hint="Type your Email"
             android:inputType="textEmailAddress"
-            android:textColor="#121212" />
+            android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
