--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    card_view:cardCornerRadius="8dp"
+    android:layout_margin="8dp">
 
-    <!-- Profile Image -->
-    <ImageView
-        android:id="@+id/profileImage"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="16dp" />
-
-    <!-- Name -->
     <TextView
         android:id="@+id/personNameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Person Name"
-        android:textSize="18sp"
-        android:gravity="center_vertical" />
-</LinearLayout>
+        android:padding="16dp"
+        android:textSize="16sp"
+        android:textColor="@android:color/black" />
+</androidx.cardview.widget.CardView>
+
