--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,7 +20,7 @@
 
     <activity
         android:id="@+id/nav_tasks"
-        android:name="com.example.cs_topics_project_test.ui.tasks.TaskView"
+        android:name="com.example.cs_topics_project_test.task.TaskView"
         android:label="@string/menu_tasks"
         tools:layout="@layout/fragment_tasks" />
 </navigation>
