--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -62,18 +62,18 @@
                 android:text="Due:" />
 
             <TextView
-                android:id="@+id/taskDate"
+                android:id="@+id/textViewTaskDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="01/19/2025" />
+                android:text="1/1/2025" />
 
             <TextView
-                android:id="@+id/taskTime"
+                android:id="@+id/textViewTaskTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="14:06" />
+                android:text="12:00 PM" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
