--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -38,9 +38,11 @@
         android:id="@+id/recyclerViewCalendar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/dateView"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="8dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dateView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
