--- a/app/src/main/res/layout/item_task_calendar.xml
+++ b/app/src/main/res/layout/item_task_calendar.xml
@@ -1,24 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:background="#FFFFFF">
 
-    <CheckBox
-        android:id="@+id/checkBoxTask"
+    <LinearLayout
+        android:id="@+id/linearCalendarTask"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <CheckBox
+            android:id="@+id/checkBoxTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:id="@+id/textViewTaskName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
+            android:text="Task Name"
+            android:textSize="20sp" />
+    </LinearLayout>
+    <TextView
+        android:id="@+id/textViewTaskTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
-
-    <TextView
-        android:id="@+id/textViewTaskName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginStart="4dp"
-        android:text="Task Name"
-        android:textSize="20sp"
-        android:layout_gravity="center"/>
-</LinearLayout>
+        app:layout_constraintBottom_toBottomOf="@id/linearCalendarTask"
+        app:layout_constraintEnd_toEndOf="@id/linearCalendarTask"
+        android:layout_marginEnd="8dp"
+        android:text="12:00 PM" />
+</androidx.constraintlayout.widget.ConstraintLayout>
