--- a/app/src/main/res/layout/fragment_task_upgrade.xml
+++ b/app/src/main/res/layout/fragment_task_upgrade.xml
@@ -16,6 +16,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--handling items that are due today-->
+    <!--<Button
+        android:id="@+id/buttonDueTodaySort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sort"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textViewDueToday"/>-->
+
+    <ImageButton
+        android:id="@+id/buttonDueTodaySort"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="Sort"
+        android:src="@drawable/ic_sort"
+        app:layout_constraintBottom_toBottomOf="@id/textViewDueToday"
+        app:layout_constraintStart_toEndOf="@id/textViewDueToday"
+        app:layout_constraintTop_toTopOf="@id/textViewDueToday" />
 
     <TextView
         android:id="@+id/toggleDueToday"
@@ -54,6 +74,18 @@
         app:layout_constraintTop_toBottomOf="@id/textViewDueToday" />
 
     <!--handling items that are due later-->
+    <ImageButton
+        android:id="@+id/buttonDueLaterSort"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="Sort"
+        android:src="@drawable/ic_sort"
+        app:layout_constraintBottom_toBottomOf="@id/textViewDueLater"
+        app:layout_constraintStart_toEndOf="@id/textViewDueLater"
+        app:layout_constraintTop_toTopOf="@id/textViewDueLater" />
+
     <TextView
         android:id="@+id/toggleDueLater"
         android:layout_width="wrap_content"
@@ -91,6 +123,18 @@
         app:layout_constraintTop_toBottomOf="@id/textViewDueLater" />
 
     <!--handling items that are past due-->
+    <ImageButton
+        android:id="@+id/buttonPastDueSort"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="Sort"
+        android:src="@drawable/ic_sort"
+        app:layout_constraintBottom_toBottomOf="@id/textViewPastDue"
+        app:layout_constraintStart_toEndOf="@id/textViewPastDue"
+        app:layout_constraintTop_toTopOf="@id/textViewPastDue" />
+
     <TextView
         android:id="@+id/togglePastDue"
         android:layout_width="wrap_content"
