you can receive messages! noticed one big issue - all users see the same chat list because i did not merge chat collection and user collection, will do that next sprint.

--- a/app/src/main/res/layout/item_sent_message.xml
+++ b/app/src/main/res/layout/item_sent_message.xml
@@ -10,18 +10,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/sent_message_background"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:gravity="end"
         android:layout_gravity="end"
+        android:padding="8dp"
         >
 
         <TextView
             android:id="@+id/messageText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="8dp"
             android:breakStrategy="simple"
             android:ellipsize="none"
-            android:lineSpacingExtra="0dp"
+            android:lineSpacingExtra="2dp"
             android:maxWidth="240dp"
             android:padding="6dp"
             android:scrollHorizontally="false"
