--- a/app/src/main/res/layout/item_received_message.xml
+++ b/app/src/main/res/layout/item_received_message.xml
@@ -8,6 +8,7 @@ android:background="@drawable/received_message_background"
 android:padding="8dp"
 android:gravity="end"
 android:layout_marginStart="16dp"
+    android:layout_marginBottom="8dp"
 android:layout_marginEnd="16dp">
 
 <TextView
@@ -17,7 +18,7 @@ android:layout_marginEnd="16dp">
     android:textColor="#000000"
     android:textSize="16sp"
     android:maxWidth="240dp"
-    android:padding="8dp"
+    android:padding="6dp"
     android:singleLine="false"
     android:ellipsize="none"
     android:breakStrategy="simple"
